client/src/RatingsReviews/ReviewStyle.scss
/*****************************/
/*Ratings and Reviews Section*/
/*****************************/
/* RR buttons */
.button-color-change {
  border-radius: 5px;
  font-size: 20px;
  padding: 14px 80px;
  cursor: pointer;
  color: #fff;
  background-color: #2be255;
  font-size: 1.5rem;
  font-family: 'Roboto';
  font-weight: 100;
  border: 1px solid #fff;
  box-shadow: 2px 2px 5px#4bff74;
  transition-duration: 0.5s;
  -webkit-transition-duration: 0.5s;
  -moz-transition-duration: 0.5s;
}

.rr-line-break {
  width: 70%;
  margin-left: auto;
  margin-right: auto;
}

.button-color-change:hover {
  color: #575757;
  border: 1px solid #78ffa5;
  box-shadow: 2px 2px 20px #066827;
}

.rr-button.button-color-change {
  -webkit-appearance: none;
  -moz-appearance: none;
}

/* Modal Settings */
.rr-modal-image {
  height: 20px;
  width: 20px;
}

.rr-modal {
  position: fixed;
  top: 0;
  left: 0;
  width: 50%;
  height: 50%;
  background: rgba(255, 0, 0, 0.6);
}

.rr-modal-main {
  position: fixed;
  background: white;
  width: 70%;
  height: 50%;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

.rr-display-block {
  display: block;
}

.rr-display-none {
  display: none;
}
/* modal settings ends */

/*Star settings*/
:root {
  --star-size: medium;
  --star-color: rgb(160, 160, 160);
  --star-background: rgba(228, 38, 38, 0.808);
}

.Stars {
  --percent: calc(var(--rating) / 5 * 100%);

  display: inline-block;
  font-size: var(--star-size);
  font-family: Times; // make sure ★ appears correctly
  line-height: 1;

  &::before {
    content: '★★★★★';
    letter-spacing: 3px;
    background: linear-gradient(
      90deg,
      var(--star-background) var(--percent),
      var(--star-color) var(--percent)
    );
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
  }
}
/* Stars settings ends */
.rr-breakdown {
  grid-row: 1;
}
/* Review bar */
.rr-product-breakdown {
  background-color: white;
}
.rr-product-overview-text {
  display: flex;
  justify-content: space-between;
}
.rr-product-overview-bar-container {
  width: 100%;
  background-color: #dddddd;
  border-radius: 10px;
}
.rr-product-overview-review-bar {
  text-align: right;
  color: green;
  background-color: #2be255;
  height: 1%;
  border-radius: 10px;
}
.rr-product-overview-bar-container h2 {
  color: black;
  font-size: 30px;
  position: relative;
  top: 0px;
  left: 1.5%;
}

.rr-review-bar-container {
  width: 100%;
  background-color: #dddddd;
  border-radius: 10px;
}
.rr-review-bar {
  text-align: right;
  /* padding-top: 10px; */
  /* padding-bottom: 10px; */
  border-style: solid;
  border-width: 10px;
  color: #2be255;
  border-radius: 10px;
}

.rr-review-bar:hover {
  border: greenyellow;
  border-style: solid;
  border-width: 10px;
}
/* Review bar ends */

.rr-check-square {
  color: rgb(0, 0, 0);
}

.rr-parent {
  color: black;
  display: grid;
  grid-template-columns: 40% 60%;
  grid-template-rows: 300px;
  background-color: white;
  gap: 10px;
  height: 600px;
}
.rr-rating-breakdown {
  background-color: #ffffff;
  grid-column: 1;
  grid-row: 1;
}

.rr-tiles-container {
  // grid-column: 2;
  // grid-row: 1 / -1;
  // display: flex;
  // grid-template-columns: 1;
  // grid-template-rows: auto;
  // overflow-y: scroll;
  // flex-direction: column;
  grid-column-start: 2;
  display: flex;
  grid-row-start: 1;
  grid-row-end: 3;
  /* grid-row-end: 2; */
  grid-template-columns: 1;
  grid-template-rows: auto;
  //overflow-y: scroll;
  flex-direction: column;
  overflow-y: auto;
}
.rr-rating-big {
  background-color: chocolate;
  grid-row-start: 1;
  grid-row-end: 3;
  grid-column-start: 1;
  grid-column-end: 2;
}

.rr-review-footer {
  display: flex;
  justify-content: space-between;
}

.rr-product-breakdown-container {
  grid-row: 2;
  height: 10%;
}

/* Review tile component */
.rr-review-tile-container {
  // font-size: 1vw;
  grid-column: 2;
  display: grid;
  grid-template-rows: 10% 10% auto 10% auto auto 10%;
  grid-template-columns: auto auto auto auto auto;
  height: 300px;
}
.rr-review-tile-stars {
  grid-row-start: 1;
  grid-column-start: 1;
}
.rr-tile-summary {
  grid-row: 2;
  grid-column: span 5;
}
.rr-review-body {
  grid-row-start: 3;
  grid-column: span 5;
}
.rr-recommended {
  grid-row-start: 4;
  grid-column: span 5;
}
.rr-photos-div {
  grid-row-start: 6;
  grid-column: span 5;
  width: 70%;
  margin: auto;
}
.rr-product-thumbnail {
  max-height: 100px;
  max-width: 100px;
}
.rr-tile-checkmark {
  grid-column: 4 span;
}
.rr-helpfulness {
  grid-row: 7;
  grid-column: span 5;
}
/* Review Breakdown Component */

/* End Review Breakdown Component */
/* Rating and Reviews submit reviews modal */
/* Modal Settings */
.rr-modal-image {
  width: 50%;
  height: auto;
}

.rr-review-modal {
  position: fixed;
  top: 10%;
  left: 10%;
  width: 80%;
  height: auto;
  background: rgb(255, 0, 0);
  margin: auto;
}

.rr-review-modal-main {
  position: fixed;
  background: rgb(255, 255, 255);
  width: 70%;
  height: 60%;
  top: 50%;
  left: 50%;
  overflow: hidden;
  transform: translate(-50%, -50%);
  overflow-y: auto;
}

.rr-form-display-block {
  display: block;
}

.rr-form-display-none {
  display: none;
}

.rr-review-modal-stars {
  width: 50%;
  height: auto;
}

.rr-modal-form-thumbnail {
  width: 20%;
  height: auto;
}
.rr-star-modal-group {
  /* remove inline-block whitespace */
  font-size: 0;
  /* flip the order so we can use the + and ~ combinators */
  unicode-bidi: bidi-override;
  direction: rtl;
  /* the hidden clearer */
}
.rr-star-modal-group * {
  font-size: 1rem;
}
.rr-star-modal-group > input {
  display: none;
}
.rr-star-modal-group > input + label {
  /* only enough room for the star */
  display: inline-block;
  overflow: hidden;
  text-indent: 9999px;
  width: 1em;
  white-space: nowrap;
  cursor: pointer;
}
.rr-star-modal-group > input + label:before {
  display: inline-block;
  text-indent: -9999px;
  content: '☆';
  color: #888;
}
.rr-star-modal-group > input:checked ~ label:before,
.rr-star-modal-group > input + label:hover ~ label:before,
.rr-star-modal-group > input + label:hover:before {
  content: '★';
  color: #e52;
  text-shadow: 0 0 1px #333;
}
.rr-star-modal-group > .rr-star-modal-clear + label {
  text-indent: -9999px;
  width: 0.5em;
  margin-left: -0.5em;
}
.rr-star-modal-group > .rr-star-modal-clear + label:before {
  width: 0.5em;
}
.rr-star-modal-group:hover > input + label:before {
  content: '☆';
  color: #888;
  text-shadow: none;
}
.rr-star-modal-group:hover > input + label:hover ~ label:before,
.rr-star-modal-group:hover > input + label:hover:before {
  content: '★';
  color: #e52;
  text-shadow: 0 0 1px #333;
}

.rr-chara-1 {
  display: inline-block;
  padding-left: 7%;
}
.rr-chara-radio-button {
  padding-left: 10%;
}
.rr-chara-rad-butt {
  margin: 0 15% 0 0%;
}
/* End rating and reviews submit reviews modal */
/*End Ratings and Reviews*/

